fix carousel width on mobile

--- a/assets/css/homepage/product.css
+++ b/assets/css/homepage/product.css
@@ -41,7 +41,7 @@
 }
 
 .product-carousel-item {
-  height: 90vh;
+  height: 80vh;
   display: flex;
   align-items: center;
   justify-content: center;
